--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
     script: 
       docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker push ${IMAGE_NAME}
     on:
-      branch: master
+      branch: working
   
   - provider: script
     script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker tag ${IMAGE_NAME} ${IMAGE_NAME_TAGGED} && docker push ${IMAGE_NAME_TAGGED}
