--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 
 test {
     filter {
-        includeTestsMatching "org.wahlzeit.AllTests"
+        includeTestsMatching "MasterTestSuite"
     }
     testLogging {
             events "passed", "skipped", "failed"
